--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -45,9 +45,9 @@ shadow-offset-y = -7;
 # shadow-exclude = []
 shadow-exclude = [
   "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
+  # "class_g = 'Conky'",
+  # "class_g ?= 'Notify-osd'",
+  # "class_g = 'Cairo-clock'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -122,7 +122,9 @@ inactive-opacity-override = false;
 
 # Specify a list of conditions of windows that should never be considered focused.
 # focus-exclude = []
-focus-exclude = [ "class_g = 'Cairo-clock'" ];
+focus-exclude = [ 
+# "class_g = 'Cairo-clock'"
+];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
@@ -148,7 +150,7 @@ corner-radius = 0
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
-  "window_type = 'dock'",
+  # "window_type = 'dock'",
   "window_type = 'desktop'"
 ];
 
@@ -164,24 +166,24 @@ rounded-corners-exclude = [
 #
 # blur-deviation = false
 #
-# blur-strength = 5
+# blur-strength = 8
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
 # The name of the switch may change without prior notifications.
 #
-# blur-background = false
+# blur-background = true 
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
 #    blur-background
 # Bad in performance, with driver-dependent behavior. The name may change.
 #
-# blur-background-frame = false
+# blur-background-frame = true # default false 
 
 
 # Use fixed blur strength rather than adjusting according to window opacity.
-# blur-background-fixed = false
+# blur-background-fixed = true # default false 
 
 
 # Specify the blur convolution kernel, with the following format:
@@ -189,15 +191,15 @@ rounded-corners-exclude = [
 #   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 #
 # blur-kern = ""
-blur-kern = "3x3box";
+# blur-kern = "3x3box";
 
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
 blur-background-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c"
+  # "window_type = 'dock'",
+  # "window_type = 'desktop'",
+  # "_GTK_FRAME_EXTENTS@:c"
 ];
 
 #################################
@@ -213,13 +215,13 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, `egl` or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-# backend = "glx"
-backend = "xrender";
+backend = "glx"
+# backend = "xrender";
 
 # Use higher precision during rendering, and apply dither when presenting the
 # rendered screen. Reduces banding artifacts, but might cause performance
 # degradation. Only works with OpenGL.
-dithered-present = false;
+# dithered-present = false;
 
 # Enable/disable VSync.
 # vsync = false
@@ -316,7 +318,7 @@ glx-no-stencil = true;
 # The opposing option is use-damage
 #
 # no-use-damage = false
-use-damage = true;
+# use-damage = true;
 
 # Use X Sync fence to sync clients' draw calls, to make sure all draw
 # calls are finished before picom starts drawing. Needed on nvidia-drivers
@@ -424,8 +426,8 @@ log-level = "warn";
 wintypes:
 {
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
-  dock = { shadow = false; clip-shadow-above = true; }
-  dnd = { shadow = false; }
+  # dock = { shadow = false; clip-shadow-above = true; }
+  # dnd = { shadow = false; }
   popup_menu = { opacity = 0.8; }
-  dropdown_menu = { opacity = 0.8; }
+  # dropdown_menu = { opacity = 0.8; }
 };
