--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -8,22 +8,22 @@
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-shadow = true;
+# shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 7;
+# shadow-radius = 7;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 # shadow-opacity = .75
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -7;
+# shadow-offset-x = -7;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -7;
+# shadow-offset-y = -7;
 
 # Red color value of shadow (0.0 - 1.0, defaults to 0).
 # shadow-red = 0
@@ -43,13 +43,13 @@ shadow-offset-y = -7;
 #   shadow-exclude = "n:e:Notification";
 #
 # shadow-exclude = []
-shadow-exclude = [
-  "name = 'Notification'",
-  # "class_g = 'Conky'",
-  # "class_g ?= 'Notify-osd'",
-  # "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c"
-];
+# shadow-exclude = [
+# "name = 'Notification'",
+# "class_g = 'Conky'",
+# "class_g ?= 'Notify-osd'",
+# "class_g = 'Cairo-clock'",
+# "_GTK_FRAME_EXTENTS@:c"
+# ];
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
 # clip-shadow-above = []
@@ -88,10 +88,10 @@ fade-out-step = 0.03;
 # fade-delta = 10
 
 # Specify a list of conditions of windows that should not be faded.
-# fade-exclude = []
+fade-exclude = []
 
 # Do not fade on window open/close.
-# no-fading-openclose = false
+no-fading-openclose = false
 
 # Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
 # no-fading-destroyed-argb = false
@@ -103,28 +103,28 @@ fade-out-step = 0.03;
 
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-# inactive-opacity = 1
-inactive-opacity = 0.95;
+inactive-opacity = 1
+# inactive-opacity = 0.95;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-# frame-opacity = 1.0
-frame-opacity = 0.9;
+frame-opacity = 1.0
+# frame-opacity = 0.9;
 
 # Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
 # inactive-opacity-override = true
 inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-# active-opacity = 1.0
+active-opacity = 1.0
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.0
 
 # Specify a list of conditions of windows that should never be considered focused.
-# focus-exclude = []
-focus-exclude = [ 
+focus-exclude = []
+# focus-exclude = [ 
 # "class_g = 'Cairo-clock'"
-];
+# ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
@@ -146,13 +146,13 @@ focus-exclude = [
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 0
+# corner-radius = 0
 
 # Exclude conditions for rounded corners.
-rounded-corners-exclude = [
+# rounded-corners-exclude = [
   # "window_type = 'dock'",
-  "window_type = 'desktop'"
-];
+  # "window_type = 'desktop'"
+# ];
 
 
 #################################
@@ -161,18 +161,18 @@ rounded-corners-exclude = [
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-# blur-method =
+blur-method = "dual_kawase"
 # blur-size = 12
 #
 # blur-deviation = false
 #
-# blur-strength = 8
+blur-strength = 8
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
 # The name of the switch may change without prior notifications.
 #
-# blur-background = true 
+blur-background = true 
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
@@ -199,6 +199,7 @@ rounded-corners-exclude = [
 blur-background-exclude = [
   # "window_type = 'dock'",
   # "window_type = 'desktop'",
+  "window_type = 'xfce4-screenshooter'",
   # "_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -231,23 +232,23 @@ vsync = true;
 # child that has 'WM_STATE') and mark them as active.
 #
 # mark-wmwin-focused = false
-mark-wmwin-focused = true;
+# mark-wmwin-focused = true;
 
 # Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
 # mark-ovredir-focused = false
-mark-ovredir-focused = true;
+# mark-ovredir-focused = true;
 
 # Try to detect windows with rounded corners and don't consider them
 # shaped windows. The accuracy is not very high, unfortunately.
 #
 # detect-rounded-corners = false
-detect-rounded-corners = true;
+# detect-rounded-corners = true;
 
 # Detect '_NET_WM_WINDOW_OPACITY' on client windows, useful for window managers
 # not passing '_NET_WM_WINDOW_OPACITY' of client windows to frame windows.
 #
 # detect-client-opacity = false
-detect-client-opacity = true;
+# detect-client-opacity = true;
 
 # Use EWMH '_NET_ACTIVE_WINDOW' to determine currently focused window,
 # rather than listening to 'FocusIn'/'FocusOut' event. Might have more accuracy,
@@ -271,7 +272,7 @@ detect-client-opacity = true;
 # in the same group focused at the same time.
 #
 # detect-transient = false
-detect-transient = true;
+# detect-transient = true;
 
 # Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same
 # group focused at the same time. This usually means windows from the same application
