--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,17 +1,28 @@
-fading = true;
-fade-in-step = 0.03;
-fade-out-step = 0.03;
-fade-exclude = [];
-no-fading-openclose = false;
+shadow = true;
+shadow-radius = 16;
+shadow-opacity = 0.5;
+# shadow-exclude = []
+shadow-ignore-shaped = false;
 
-inactive-opacity = 0.90;
+fading = true;
+fade-in-step = 0.05;
+fade-out-step = 0.05;
+# fade-exclude = [];
+# no-fading-openclose = false;
+
+inactive-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = false;
-active-opacity = 1.0;
+active-opacity = 1;
 inactive-dim = 0.3
 opacity-rule = [
   "90:class_g = 'Alacritty' && focused",
   "70:class_g = 'Alacritty' && !focused",
+];
+
+rounded-corners-exclude = [
+  "window_type = 'dock'",
+  "window_type = 'desktop'"
 ];
 
 blur-kern = "3x3box";
@@ -24,16 +35,28 @@ blur-background-exclude = [
 backend = "glx";
 dithered-present = false;
 vsync = true;
+dbe = false;
+
+unredir-if-possible = false
+
 mark-wmwin-focused = true;
+mark-ovredir-focused = true;
+
 detect-rounded-corners = true;
 detect-client-opacity = true;
 use-ewmh-active-win = true
-unredir-if-possible = false
-detect-client-leader = true 
-glx-no-stencil = true;
+
+detect-transient = true;
+detect-client-leader = true ;
 use-damage = true;
+
 xrender-sync-fence = true 
+
 log-level = "warn";
+
+glx-no-stencil = true;
+glx-copy-from-front = false;
+
 wintypes:
 {
   tooltip = { 
