--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,7 @@
 # https://github.com/tmux/tmux/issues/1246:
 
 # set -g default-terminal "${TERM}"
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "tmux-256color"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 set -as terminal-features ",alacritty:RGB"
