--- a/.gitconfig
+++ b/.gitconfig
@@ -8,6 +8,11 @@
 	defaultBranch = main
 [core]
 	editor = nvim
+  whitespace = -trailing-space
+[status]
+  short = true
+[fetch]
+  prune = true
 [color]
   status = auto
   diff = auto
@@ -15,3 +20,18 @@
   interactive = auto
   grep = auto
   ui = auto
+[mergetool]
+  keepBackup = false
+  keepTemporaries = false
+  prompt = false
+[diff]
+	colorMoved = true
+[advice]
+	statusHints = off
+[merge]
+  ff = only
+[pull]
+  rebase = merges
+[push]
+  default = upstream
+  followTags = true
